Updated portfolio content and layout

--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,9 @@
       <h2>Let's Connect</h2>
       <p>You can reach me at:</p>
       <ul>
-        <li>Email: <a href="mailto:jaymodi@example.com">jaymodi@example.com</a></li>
-        <li>GitHub: <a href="https://github.com/jaymodi3542" target="_blank">jaymodi3542</a></li>
-        <li>LinkedIn: <a href="https://linkedin.com/in/jaymodi3542" target="_blank">jaymodi3542</a></li>
+        <li>Email: <a href="mailto:jay.modi3542@yahoo.com">jay.modi3542@yahoo.com</a></li>
+        <li>GitHub: <a href="https://github.com/jaymodi3542" target="_blank">Jay Modi Github</a></li>
+        <li>LinkedIn: <a href="https://www.linkedin.com/in/jaybharatkumarmodi/" target="_blank">Jay Modi Linkedln</a></li>
       </ul>
     </section>
   </main>
