Revamped UI and added real content for homepage, projects, and contact pages

--- a/contact.html
+++ b/contact.html
@@ -15,17 +15,20 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
+
   <main>
     <section>
-      <h2>Let's Connect</h2>
-      <p>You can reach me at:</p>
+      <h2>Let’s Connect</h2>
+      <p>You can reach out to me via:</p>
       <ul>
-        <li>Email: <a href="mailto:jay.modi3542@yahoo.com">jay.modi3542@yahoo.com</a></li>
-        <li>GitHub: <a href="https://github.com/jaymodi3542" target="_blank">Jay Modi Github</a></li>
-        <li>LinkedIn: <a href="https://www.linkedin.com/in/jaybharatkumarmodi/" target="_blank">Jay Modi Linkedln</a></li>
+        <li>Email: <a href="mailto:jaymodi@example.com">jaymodi@example.com</a></li>
+        <li>GitHub: <a href="https://github.com/jaymodi3542" target="_blank">jaymodi3542</a></li>
+        <li>LinkedIn: <a href="https://linkedin.com/in/jaymodi3542" target="_blank">jaymodi3542</a></li>
       </ul>
+      <p>I’m open to collaboration, freelance work, or full-time opportunities in cloud engineering and DevOps.</p>
     </section>
   </main>
+
   <footer>
     <p>&copy; 2025 Jay Modi</p>
   </footer>
