--- a/index.html
+++ b/index.html
@@ -9,21 +9,51 @@
 <body>
   <header>
     <h1>Jay Modi</h1>
-    <p>Cloud | DevOps | Terraform</p>
+    <p>Cloud Engineer | AWS Certified | Terraform | DevOps Enthusiast</p>
     <nav>
       <a href="index.html">Home</a>
       <a href="projects.html">Projects</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
+
   <main>
     <section>
       <h2>About Me</h2>
-      <p>I'm a cloud engineer passionate about building scalable and secure infrastructure on AWS. I love automating deployments and designing cloud-native solutions.</p>
+      <p>
+        I'm a Cloud Engineer with experience in designing, deploying, and automating infrastructure on AWS.
+        I specialize in Infrastructure as Code using Terraform, and I’ve built CI/CD pipelines, managed EC2,
+        S3, Lambda, ECS, IAM, CloudWatch, and more. I’m always learning and looking to build things that scale.
+      </p>
+    </section>
+
+    <section>
+      <h2>Certifications</h2>
+      <ul>
+        <li>AWS Certified Solutions Architect – Associate</li>
+        <li>HashiCorp Certified: Terraform Associate</li>
+        <li>Currently pursuing: CKA, AWS SysOps Admin</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Technical Skills</h2>
+      <ul>
+        <li><strong>Cloud:</strong> AWS, GCP (beginner)</li>
+        <li><strong>DevOps:</strong> Terraform, GitHub Actions, Docker, CI/CD</li>
+        <li><strong>Scripting:</strong> Bash, Python (automation)</li>
+        <li><strong>Tools:</strong> Git, VS Code, Linux CLI, CloudWatch</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Current Projects</h2>
+      <p>Right now, I'm building a full CI/CD pipeline to deploy my portfolio site using GitHub Actions, S3, and CloudFront — fully automated and cost-effective.</p>
     </section>
   </main>
+
   <footer>
-    <p>&copy; 2025 Jay Modi</p>
+    <p>&copy; 2025 Jay Modi | <a href="https://github.com/jaymodi3542" target="_blank">GitHub</a> | <a href="https://linkedin.com/in/jaymodi3542" target="_blank">LinkedIn</a></p>
   </footer>
 </body>
 </html>
