--- a/projects.html
+++ b/projects.html
@@ -15,11 +15,33 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
+
   <main>
     <section>
-      <h2>Highlighted Projects</h2>
+      <h2>Highlighted Cloud Projects</h2>
       <ul>
         <li>
-          <strong>CI/CD Pipeline on AWS:</strong>
-          Deployed static website using GitHub Actions, S3, CloudFront, and Route 53.
+          <strong>✅ S3 Static Website + CloudFront + CI/CD</strong><br>
+          Built and deployed a personal portfolio using GitHub Actions, S3, CloudFront, and Route 53. Supports HTTPS and global distribution.
         </li>
+        <li>
+          <strong>☁️ Terraform Infrastructure Modules</strong><br>
+          Created reusable Terraform modules for VPC, EC2, RDS, and IAM. Emphasized security, reusability, and scalability.
+        </li>
+        <li>
+          <strong>📈 CloudWatch + SNS Monitoring System</strong><br>
+          Set up detailed monitoring with alarms and email notifications using CloudWatch, SNS, and Lambda.
+        </li>
+        <li>
+          <strong>🐳 ECS Fargate with GitHub Actions</strong><br>
+          Automated deployment of a Dockerized app to ECS using GitHub Actions CI/CD pipeline.
+        </li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Jay Modi</p>
+  </footer>
+</body>
+</html>
